# front-mqtt

./: .gitignore  Cargo.toml  build.rs
client/: generate.sh  package.json  tsconfig.json
client/src/: index.ts
front/: package-lock.json  package.json
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/app/dashboard/: globals.css  page.tsx
front/src/app/login/: page.tsx
front/src/components/animation/: SVGAnimationAir.tsx  css.css
front/src/components/forms/: LoginForm.tsx
front/src/components/it/: CardAir.tsx
front/src/context/: Theme.tsx
proto/: services.proto
src/: lib.rs  main.rs
src/fun/: mod.rs  services.rs
src/fun/mqtt_broker/: broker.rs  client.rs  mod.rs
tests/: fun_test.rs
