[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
tokio = { version = "1", features = ["full","tracing"] }


#GRPC
tonic = "0.11.0"
tonic-reflection = "0.11.0"
prost = "0.12.4"


#MQTT
mqtt-v5 = { path = "./mqtt-v5", version = "0.2" }

dotenv = "0.15.0"
config = "0.14.0"
tracing-subscriber = "0.3.18"
log = "0.4.21"
futures = "0.3.30"
env_logger = "0.11.3"
tokio-util = "0.7.10"
nanoid = "0.4.0"
bytes = "1.6.0"


[dev-dependencies]
pretty_env_logger = "0.5.0"

[build-dependencies]
tonic-build = "0.11.0"

